--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   video_player: ^2.5.1
   visibility_detector: ^0.3.3
+  readmore: ^2.1.0
+  marquee: ^2.2.3
     
 
 
@@ -67,7 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/videos/test.mp4
+    - assets/videos/test_video.mp4
+    - assets/image/tree.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
